# ros-training

./: .gitignore  LICENSE  README.md  README.org  Readme.md  building_slides.md  building_slides.org  faq.md  index.html  package-lock.json  resizing_virtualbox.md
.circleci/: config.yml
_assets/style/: style.css
code/buzzsim/: CMakeLists.txt  package.xml
code/buzzsim/include/buzzsim/: app.h  frame.h  motion.h  obstacle.h  obstacle_parser.h  turtle.h  world.h  world_config_parser.h
code/buzzsim/include/buzzsim/sensors/: cgal_types.h  lidar.h  lidar_painter.h  print_utils.h
code/buzzsim/src/buzzsim/: app.cpp  frame.cpp  main.cpp  motion.cpp  obstacle.cpp  obstacle_parser.cpp  turtle.cpp  world.cpp  world_config_parser.cpp
code/buzzsim/src/buzzsim/sensors/: lidar.cpp  lidar_painter.cpp  print_utils.cpp
code/hal_control/: CMakeLists.txt  package.xml
code/hal_control/config/: hal_joint_control.yaml
code/hal_control/launch/: gazebo.launch  hal_control.launch
code/hal_control/node/: hal_control.cpp
code/hal_control/scripts/: spawn_hal.sh
code/hal_description/: CMakeLists.txt  hal.urdf  package.xml
code/hal_description/launch/: hal.launch
code/hal_description/urdf/: empty.world  hal.urdf
code/hal_description/urdf/models/ground_plane/: model.config  model.sdf
code/hal_description/urdf/models/sun/: model.config
code/igvc_training_exercises/: CMakeLists.txt  package.xml
code/igvc_training_exercises/bag/: drag_race.bag  start_light.bag
code/igvc_training_exercises/config/week3/: world.yml
code/igvc_training_exercises/config/week4/: world.yml
code/igvc_training_exercises/config/week5/: world.yml
code/igvc_training_exercises/config/week6/: world.yml
code/igvc_training_exercises/config/week_scanmatching/: world.yml
code/igvc_training_exercises/config/week_slam/: world.yml
code/igvc_training_exercises/include/week_scanmatching/: scanmatcher.h  scanmatching_localizer.h
code/igvc_training_exercises/include/week_scanmatching/icp/: icp.h
code/igvc_training_exercises/include/week_slam/: barrel_ransac.h  landmark_registration.h  mapper.h  slam_node.h  slam_node_params.h
code/igvc_training_exercises/include/week_slam/g2o/: IMU_measurement.h  g2o_robot_state.h
code/igvc_training_exercises/include/week_slam/g2o/edge/: edge_holonomic.h  edge_imu.h  edge_landmark.h  edge_point_on_circle.h
code/igvc_training_exercises/include/week_slam/g2o/vertex/: vertex_robot_state.h
code/igvc_training_exercises/launch/: slam.launch  week3.launch  week4.launch  week5.launch  week6.launch  week7.launch  week7_line_detector.launch  week7_start_light_detector.launch  week_scanmatching.launch  week_slam.launch
code/igvc_training_exercises/src/week2/: CMakeLists.txt
code/igvc_training_exercises/src/week3/: CMakeLists.txt  main.cpp
code/igvc_training_exercises/src/week4/: CMakeLists.txt  main.cpp
code/igvc_training_exercises/src/week5/: CMakeLists.txt  main.cpp
code/igvc_training_exercises/src/week6/: CMakeLists.txt  main.cpp
code/igvc_training_exercises/src/week7/: CMakeLists.txt  line_detector.cpp
code/igvc_training_exercises/src/week7_answers/: CMakeLists.txt  line_detector.cpp  start_light_detector.cpp
code/igvc_training_exercises/src/week_scanmatching/: CMakeLists.txt  main.cpp  scanmatching_localizer.cpp
code/igvc_training_exercises/src/week_scanmatching/icp/: icp.cpp
code/igvc_training_exercises/src/week_slam/: CMakeLists.txt  barrel_ransac.cpp  landmark_registration.cpp  main.cpp  mapper.cpp  slam_node.cpp  slam_node_params.cpp
code/igvc_training_exercises/src/week_slam/g2o/edge/: edge_imu.cpp  edge_landmark.cpp  edge_point_on_circle.cpp
code/igvc_training_exercises/src/week_slam/g2o/vertex/: vertex_circle.cpp  vertex_robot_state.cpp
code/igvc_training_msgs/: CMakeLists.txt  package.xml
code/instructions/: introduction.md  ros-installation.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  workspace-setup.md
code/msgs/: CMakeLists.txt  package.xml
code/msgs/msg/: speed_pair.msg
code/week1/: CMakeLists.txt
code/week1/launch/: listener.launch
code/week1/src/: listener.cpp  talker.cpp
code/week2/: package.xml
code/week2/src/: listener.cpp  talker.cpp
code/week3/: CMakeLists.txt  package.xml
code/week3/launch/: driver.launch
code/week3/src/: driver.cpp
code/week4/: CMakeLists.txt  package.xml
code/week4/launch/: follower.launch  follower_jason.launch  gazebo.launch
code/week4/src/: converter.cpp  follower.cpp  follower_jason.cpp
code/week5/: CMakeLists.txt  package.xml
code/week5/launch/: tf_example.launch
code/week5/src/: follower.cpp  locator.cpp
code/week6/: CMakeLists.txt  package.xml
code/week6/launch/: find_blue.launch
code/week6/src/: findBlue.cpp
code/week7/: CMakeLists.txt  package.xml
code/week7/launch/: image_processing.launch
code/week7/src/: main.cpp
docs/week1/: week1.md
docs/week2/: coordinateFrames.md  week2.md
docs/week3/: week3.md
docs/week4/: week4.md
docs/week5/: week5.md
docs/week6/: week6.md
docs/week7/: week7.md
launch/: sweep.launch
slides/: Cask  igvc-software-training.el  makefile  reveal.json  ros-training.el
slides/igvc/week1/: week1.md
slides/igvc/week3/: week3.md
slides/roboracing/week1/: week1.md
slides/roboracing/week2/: coordinateFrames.org  week2.md  week2.org
slides/roboracing/week3/: week3.org
slides/roboracing/week4/: week4.md
slides/roboracing/week6/: week6.org
slides/style/: style.css
slides/week1/: week1.html  week1.md  week1.org
slides/week2/: coordinateFrames.html  coordinateFrames.org  week2.html  week2.md  week2.org
slides/week2_5/: week2_5.md
slides/week3/: week3.html  week3.md  week3.org
slides/week4/: week4.html  week4.md  week4.org
slides/week5/: week5.html  week5.md  week5.org
slides/week6/: week6.html  week6.md  week6.org
slides/week7/: week7.html  week7.md  week7.org
week1/: igvc_week1.html  roboracing_week1.html  week1.html
week2/: week2.html
week3/: week3.html
week4/: week4.html
week5/: week5.html
week6/: week6.html
week7/: week7.html
