<?xml version="1.0"?>
<package format="2">
  <name>node_example</name>
  <version>0.0.1</version>
  <description>
  basic publisher and subscriber for IGVC and RR ROS training
  </description>
  <author>Jason Gibson</author>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
