<?xml version="1.0"?>
<package format="2">
  <name>basic_driver</name>
  <version>0.0.1</version>
  <description>
  basic control of HAL
  </description>
  <author>Jason Gibson</author>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
