<?xml version="1.0"?>
<package format="2">
  <name>follower</name>
  <version>0.0.1</version>
  <description>
  basic control of HAL
  </description>
  <author>Jason Gibson</author>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>hal_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>laser_geometry</depend>
</package>
