<?xml version="1.0"?>
<package format="2">
  <name>follower_2</name>
  <version>0.0.1</version>
  <description>
  controlling HAL using TF
  </description>
  <author>Jason Gibson</author>
  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>hal_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf</depend>
</package>
