<?xml version="1.0"?>
<package>
  <name>find_blue</name>
  <version>0.0.0</version>
  <description>The findBlue package</description>

  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
  <license>MIT</license>

  <url type="website">http://robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/ros-training</url>


  <author email="jgibson37@gatech.edu">Jason Gibson</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>

</package>
